# cage-examples

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: buildTimeAnalysis.yml  tests.yml
data/cage-tests/bezier/: bezier.assets  bezier.cpm  bezier.glsl  bezier.pack
data/cage-tests/bottle/: bottle.asset  bottle.assets  bottle.blend  bottle.obj_DefaultMaterial.cpm  bottle.pack  credits.txt  other.blend  other.mtl  other.obj_None.cpm
data/cage-tests/camera-effects/: effects.asset  effects.pack
data/cage-tests/cross/: cross.assets  cross.mtl  cross.pack
data/cage-tests/decals/: decal.cpm  decals.assets  decals.pack  floor.mtl  pedestal.cpm
data/cage-tests/explosion/: explosion.assets  explosion.pack  explosion_1.cpm  explosion_2.cpm  explosion_3.cpm  floor.mtl  smoke_1.cpm  smoke_2.cpm  spark_1.cpm
data/cage-tests/formats/: formats.assets  formats.blend  formats.fbx  formats.glb  formats.mtl  formats.pack  formats_fbx_chin.object  formats_fbx_ears.object  formats_glb_chin.object  formats_glb_ears.object  formats_obj.object
data/cage-tests/gui/: asimov.notice.txt  credits.txt  gui.asset  gui.assets  gui.pack  texts.po  texts.textpack  utf8test.textpack
data/cage-tests/lods/: cube.object  floor.object  lods.asset  lods.assets  lods.blend  lods.mtl  lods.pack  sphere.object
data/cage-tests/logo/: logo.asset  logo.assets  logo.pack
data/cage-tests/material/: a.cpm  b.cpm  c.cpm  material.assets  material.pack  plane.cpm
data/cage-tests/materials/: a1.cpm  a2.cpm  a3.cpm  b1.cpm  b2.cpm  b3.cpm  materials.assets  materials.pack
data/cage-tests/maze/: augment-fire.cpm  augment-fire.object  augment-magic.cpm  augment-pedestal.obj_metal.cpm  augment-pedestal.obj_spikes.cpm  augment-poison.cpm  augment-poison.object  augment-water.cpm  augment-water.object  bonus-firingRange-license.txt  bonus-firingRange.object  bonus-firingRate.object  bonus-intenseDot.object  bonus-manaDiscount.object  buildings.assets  buildings.pack  mana-capacitor.obj_water.cpm  mana-capacitor.object  mana-collector-snow.object  mana-collector-sun.cpm  mana-collector-sun.object  mana-collector-water.object  mana-collector-wind.cpm  mana-collector-wind.object  mana-collector.obj_stem.cpm  mana-relay.cpm  targeting-back.object  targeting-closest.object  targeting-farthest.cpm  targeting-front.cpm  targeting-icons-license.txt  targeting-strongest.cpm  targeting-strongest.object  targeting-weakest.cpm  targeting-weakest.object  tower-heavy.obj_black.cpm  tower-heavy.obj_ceiling.cpm  tower-light.obj_lightRock.cpm  tower-light.object  tower-medium.obj_darkRock.cpm  (+4 more)
data/cage-tests/mazetd/: mazetd.assets  mazetd.pack
data/cage-tests/monk/: monk.asset  monk.blend  monk.fbx  monk.fbx_MonkBody.cpm  monk.fbx_MonkHair.cpm  monk.fbx_MonkHead.cpm  (+2 more)
data/scenes-maps/: biplanar-monkey.txt  biplanar-shapes.txt  biplanar.txt  crytek_sponza.txt  dragon.txt  flow.txt  gltf.txt  lods.txt  material.txt  rtg.txt  rungholt_house.txt  sibenik.txt  uwplanet.txt  vr.txt
sources/: .clang-format  CMakeLists.txt
sources/cage-tests-client/: cage-test-client-asset-manager.cpp  cage-test-client-list-monitors.cpp  cage-test-client-logo.cpp
sources/cage-tests-client-engine/: cage-test-engine-cameras.cpp  cage-test-engine-doppler.cpp  cage-test-engine-exceptions.cpp  cage-test-engine-interpolation.cpp  cage-test-engine-lights.cpp  cage-test-engine-lods.cpp  cage-test-engine-performance.cpp  cage-test-engine-surround-sound.cpp  cage-test-engine-viewports.cpp
sources/cage-tests-client-gui/: cage-test-gui-layouts.cpp  cage-test-gui-splitter-spiral.cpp  cage-test-gui-widgets.cpp
sources/client/: asset-manager.cpp  assetManager.cpp  list-monitors.cpp  list-speakers.cpp  listMonitors.cpp  listSpeakers.cpp  logo.cpp  multiple-windows.cpp  multipleWindows.cpp
sources/engine/: CMakeLists.txt  assetManager.cpp  cameraEffects.cpp  cameras.cpp  doppler.cpp  exceptions.cpp  explosions.cpp  geometry.cpp  interpolation.cpp  lights.cpp  listMonitors.cpp  listSpeakers.cpp  lods.cpp  logo.cpp  material.cpp  multipleWindows.cpp  music.cpp  performance.cpp  rawVrColors.cpp  rawVrScene.cpp  rawWindow.cpp  renderToTexture.cpp  sceneIsolation.cpp  screamers.cpp  skeletalAnimation.cpp  skeleton.cpp  surround-sound.cpp  surroundSound.cpp  texts.cpp  timingFrames.cpp  translucent.cpp  viewports.cpp
sources/gui/: CMakeLists.txt  dynamicChanges.cpp  exportSkinTemplate.cpp  fontLineSpacing.cpp  fontScaling.cpp  fontTypography.cpp  fonts.cpp  generateSkin.cpp  gui.h  guiBuilder.cpp  mixture.cpp  skins.cpp  splitter-spiral.cpp  splitter.cpp  utf8test.cpp  widgetSizes.cpp  widgets.cpp
sources/gui/layouts/: alignment.cpp  line.cpp  scollbars.cpp  scrollbars.cpp  split.cpp  splitter-spiral.cpp  splitter.cpp  splitterSpiral.cpp  table.cpp
sources/gui/texts/: fontLineSpacing.cpp  fontScaling.cpp  fontSizes.cpp  fontTypography.cpp  multilingualQuotes.cpp  multilingualQuotes.txt  textLayout.cpp  utf8stressTest.cpp  utf8test.cpp
sources/gui/widgets/: button.cpp  checkBox.cpp  colorPicker.cpp  comboBox.cpp  input.cpp  label.cpp  listBox.cpp  panel.cpp  progressBar.cpp  radioBox.cpp  sliderBar.cpp  spoiler.cpp  textArea.cpp  tooltips.cpp  tooltipsPlacement.cpp  tooltipsPlacementButtons.cpp  tooltipsPlacementLabels.cpp
sources/headers/: CMakeLists.txt  header.cpp.in
sources/scenes/: CMakeLists.txt  game.cpp  game.h  generateLodData.cpp  generateMaterialData.cpp  main.cpp
sources/simple/: CMakeLists.txt  bezier.cpp  cameraEffects.cpp  decals.cpp  dynamicResolution.cpp  exceptions.cpp  exceptionsVirtualReality.cpp  explosions.cpp  formats.cpp  gamepads.cpp  geometry.cpp  guiInWorld.cpp  keybinds.cpp  lights.cpp  lods.cpp  manyLights.cpp  material.cpp  materials.cpp  maze.cpp  mazetdBuildings.cpp  mazetdMonsters.cpp  music.cpp  normals.cpp  performance.cpp  plagueRat.cpp  renderToTexture.cpp  screamers.cpp  shaderanim.cpp  skeletalAnimation.cpp  skybox.cpp  spotLights.cpp  texts.cpp  timingFrames.cpp  translucent.cpp  virtualReality.cpp
sources/websocks/: CMakeLists.txt  client.htm  server.cpp
(+1224 files in other folders)
