
message(STATUS "----------------------------------------------------------------")
message(STATUS "cage-tests")
message(STATUS "----------------------------------------------------------------")

add_subdirectory(engine)
add_subdirectory(gui)
add_subdirectory(headers)
add_subdirectory(scenes)
add_subdirectory(simple)
