
message(STATUS "----------------------------------------------------------------")
message(STATUS "cage-examples")
message(STATUS "----------------------------------------------------------------")

add_subdirectory(gui)
add_subdirectory(headers)
add_subdirectory(scenes)
add_subdirectory(simple)
add_subdirectory(websocks)
